# ersap-e2sar

./: .gitignore  CMakeLists.txt  README.md  build.gradle  services.yaml
e2sar-actors/: README.md
e2sar-actors/reassembler/: CMakeLists.txt  build.gradle
e2sar-actors/reassembler/config/live/: services.yaml
e2sar-actors/reassembler/config/localhost/: reassembler_localhost.ersap  services.yaml
e2sar-actors/reassembler/src/main/java/: BufferSizeReaderService.java  FileWriterService.java
e2sar-actors/reassembler/src/main/java/org/jlab/ersap/e2sar/: BufferSizeReaderService.java  FileWriterService.java
e2sar-actors/reassembler/src/main/resources/: BufferSizeReaderService.yaml  FileWriterService.yaml
e2sar-actors/segmentor/: CMakeLists.txt  build.gradle
e2sar-actors/segmentor/config/live/: byte_services.yaml  segmentor.ini  services.yaml
e2sar-actors/segmentor/config/localhost/: segmentor.ini  services.yaml
e2sar-actors/segmentor/input/: in.txt
e2sar-actors/segmentor/src/cpp/: segmentor_actor.cpp  segmentor_actor.hpp
e2sar-java-actors/: README.md
e2sar-java-actors/reassemblerJni/: build.gradle
e2sar-java-actors/reassemblerJni/config/live/: reassembler_live.ersap  services.yaml
e2sar-java-actors/reassemblerJni/config/localhost/: reassembler.ini  reassembler_localhost.ersap  services.yaml
e2sar-java-actors/segmentorJni/: build.gradle
e2sar-java-actors/segmentorJni/config/live/: byte_services.yaml  segmentor_live.ersap
e2sar-java-actors/segmentorJni/config/localhost/: services.yaml
include/: segmentor_actor.hpp
java/: FileReaderService.java  FileWriterService.java
reassembler/: .swp  CMakeLists.txt
reassembler/config/live/: reassembler.ini  reassembler_live.ersap  services.yaml
reassembler/config/localhost/: reassembler.ini  services.yaml
reassembler/output/: out_in.txt
reassembler/src/cpp/: reassembler_actor.cpp  reassembler_actor.hpp
reassembler/src/main/java/: BufferSizeReaderService.java  FileWriterService.java
reassembler/src/main/resources/: BufferSizeReaderService.yaml
reassemblerJni/: build.gradle
reassemblerJni/config/live/: reassembler.ini  services.yaml
reassemblerJni/output/: out_in.txt
reassemblerJni/src/main/java/: DummyEngineService.java  FileWriterService.java  ReassemblerService.java
scripts/: E2SAR-ERSAP-JAVA-fabric-lb-tester.ipynb  E2SAR-ERSAP-live-lb.ipynb  E2SAR-ERSAP-localhost.ipynb  E2SAR-JAVA-ERSAP-fabric-lb-tester.ipynb  E2SAR-JAVA-ERSAP-localhost.ipynb
scripts/.ipynb_checkpoints/: E2SAR-ERSAP-live-lb-checkpoint.ipynb  E2SAR-ERSAP-localhost-checkpoint.ipynb
scripts/post-boot/: recver.sh  sender.sh
scripts/post-boot/.ipynb_checkpoints/: recver-checkpoint.sh  sender-checkpoint.sh
segmentor/: CMakeLists.txt  segmentor.ersap  services.yaml
segmentor/config/live/: byte_services.yaml  segmentor.ini  segmentor.uri  segmentor_live.ersap  services.yaml
segmentor/config/localhost/: segmentor.uri  segmentor_localhost.ersap  services.yaml
segmentor/input/: dummy.txt
segmentor/src/cpp/: segmentor_actor.cpp  segmentor_actor.hpp
segmentor/src/main/java/: ByteBufferInputService.java  DummyWriterService.java  FileReaderService.java  FileWriterService.java
segmentorJni/config/live/: byte_services.yaml  segmentor.ini
segmentorJni/config/localhost/: segmentor.ini
src/: segmentor_actor.cpp
(+26 files in other folders)
